Fix flickering on show/hide scrollbar.

--- a/FS.TimeTracking.UI.Angular/src/styles.scss
+++ b/FS.TimeTracking.UI.Angular/src/styles.scss
@@ -13,6 +13,20 @@ $enable-negative-margins: true;
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
+/* ----------------------------------------- */
+/* Fix flickering on show/hide scrollbar
+/* ----------------------------------------- */
+html {
+  // Fix flickering after modal dialog is opened and (page) scrollbar disappears.
+  // See https://stackoverflow.com/a/59407573/1271211, https://aykevl.nl/2014/09/fix-jumping-scrollbar
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+  overflow-y: scroll;
+}
+
+/* ----------------------------------------- */
+/* Custom extensions
+/* ----------------------------------------- */
 .accordion-button {
   cursor: pointer;
 }
@@ -22,9 +36,6 @@ i.bi {
   font-family: bootstrap-icons;
 }
 
-/* ----------------------------------------- */
-/* Custom extensions
-/* ----------------------------------------- */
 .cursor-pointer {
   cursor: pointer;
 }
@@ -36,12 +47,6 @@ i.bi {
 
   .action-button {
     padding: 0.2rem $btn-padding-x-sm !important;
-  }
-
-  html {
-    // Fix flickering after modal dialog is opened and (page) scrollbar disappears.
-    // See https://stackoverflow.com/a/59407573/1271211, https://aykevl.nl/2014/09/fix-jumping-scrollbar
-    margin-left: calc(100vw - 100%);
   }
 }
 
